Made the validation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
                         <input type="submit" value="Send">
                     </span>
                 </form>
-                <div id="errors"></div>
+                <div id="errors">
+                    <p class="errorMessage"></p>
+                    <p class="errorMessage"></p>
+                    <p class="errorMessage"></p>
+                    <p class="errorMessage"></p>
+                    <p class="errorMessage"></p>
+                </div>
             </fieldset>
         </section>
     </main>
